src/gui/Components/ScreenElements/Table/Table.module.css
.headers {
  min-height: 20px;
  display: flex;
  flex-direction: row;
}

.scrolleeShifted {
  display: flex;
  flex-direction: row;
}

.table {
  flex-grow: 1;
  display: flex;
  flex-direction: column;
  position: relative;
  width: 100%;
  height: 100%;
  overflow: hidden;
}

.loadingOverlay {
  z-index: 500;
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background-color: rgba(0, 0, 0, 0.5);
  display: flex;
  align-items: center;
  justify-content: center;
}

.loadingIcon {
  color: white;
}

.headers {
  min-height: 20px;
  display: flex;
  flex-direction: row;
}

.header {
  min-height: 20px;
  display: flex;
  align-items: center;
  justify-content: center;
  white-space: nowrap;
  box-sizing: border-box;
  border-right: 1px solid #bbbbbb;
  position: relative;
  background-color: #e5e5e5;
  overflow: hidden;
}

/*
.label {
  margin-left: 3px;
  margin-right: 3px;
  overflow: hidden;
  box-sizing: border-box;
}

.order {
  position: absolute;
  right: 4px;
  font-size: 11px;
  background-color: #e5e5e5;
  padding: 2px;
}*/

.cellAreaContainer {
  position: relative;
  flex-grow: 1;
}

.canvasRow {
  position: absolute;
  top: 0;
  left: 0;
  display: flex;
  flex-direction: row;
}

/*.positionedFieldContainer {
  position: absolute;
  top: 0;
  left: 0;
}*/

